# edge-faker

./: Cargo.toml
src/: main.rs
