[package]
name = "edge-faker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["deprecated", "derive", "env"] }
fake = { version = "2.9.2", features = ["serde_json", "chrono", "derive", "random_color", "semver", "url-escape"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
unleash-types = "0.13.0"
